# LS-Backend-Core

./: .gitignore  cli_commands.txt  py101_notes.md  py110_notes.md  py120_notes.md  py130_notes.md
LS170/: ls170_notes.md
LS180/: extrasolar.dump.sql  ls180_notes.md  psql_sudo_config.md
LS180/database_design/: ecommerce.md  online_lms.md  social_media.md
LS202/: html_standard.html
LS202/styles-conference/: index.html
PY101/lesson_2/: calculator.py  (+3 more)
PY120/: oo_exercises.py  oo_textbook_practice.py  oop_rps.py  oop_ttt.py  problem_sets.py  py120_study_guide.md
PY130/: code_play.py  lesson_exercises.py  practice_test.md
PY175/: dice_counter.py  echo_server.py  image (2).png:Zone.Identifier  py175_notes.md  scratch.py
PY175/cms/: README.md  app.py  pyproject.toml
PY175/cms/cms/data/: about.md  changes.txt  users.yaml
PY175/cms/static/stylesheets/: app.css
PY175/cms/templates/: edit_file.html  index.html  layout.html  new_file.html
PY175/cms/tests/: test_app.py  users.yaml
lesson_2/: calculator.py  calculator_messages.json  pseudocode_practice.py
py_challenges.py/: anagram.py  beer_song.py  clock.py  custom_set.py  diamond.py  meetups.py  octal.py  perfect_number.py  point_mutations.py  robot_name.py  roman_num2.py  roman_numerals.py  scrabble_score.py  series.py  simple_linked_list.py  sum_of_multiples.py  test_beer_song.py  test_custom_set.py  test_meetups.py  test_octal.py  test_perfect_number.py  test_roman_num2.py  test_roman_numerals.py  test_sum_of_multiples.py  test_triangles.py  triangles.py
simple_http_server/: http_server.sh
(+44 files in other folders)
