[tool.poetry]
name = "cms"
version = "0.1.0"
description = ""
authors = ["CovertRob <robby.feconda365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
